# emergency-dispatch-system

./: .gitignore  CMakeLists.txt  README.md  common.h  config.c  config.h  incident.c  incident.h  log.c  log.h  main.c  map.c  map.h  menu.c  menu.h  simulation.c  simulation.h  stats.c  stats.h  types.h  unit.c  unit.h  unit_types.h  utils.c  utils.h
